# Android-Menu

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp
app/src/main/cpp/Hack/: Draw.h  Hook.h  Import.h  Offsets.h  SDK.h  Utils.h
app/src/main/cpp/Tools/DrawTool/: Color.h  Draw.h
app/src/main/cpp/Tools/KittyMemory/: Import.h  KittyMemory.cpp  KittyMemory.h  KittyUtils.cpp  MemoryBackup.cpp  MemoryBackup.h  MemoryPatch.cpp  MemoryPatch.h
app/src/main/cpp/Tools/SubstrateHook/: Buffer.hpp  CydiaSubstrate.h  Import.h  SubstrateARM.hpp  SubstrateDebug.cpp  SubstrateDebug.hpp  SubstrateHook.cpp  SubstrateHook.h  SubstrateLog.hpp  SubstratePosixMemory.cpp  SubstrateX86.hpp  SymbolFinder.cpp  hde64.c  hde64.h  table64.h
app/src/main/cpp/Tools/Vectors/: Rect.h  Vector2.h  Vector3.h
app/src/main/cpp/Widgets/: Category.h  CheckBox.h  SeekBar.h  Switch.h  Widgets.h
app/src/main/java/com/androidmenu/: DrawView.java  ImageBase64.java  Images.java  MainActivity.java  Menu.java  Start.java  Utils.java  Widgets.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
